Update README.md
added compiling and run commands for javafx